CREATE TABLE CIA_INDICADOR (
    ID_INDICADOR NUMBER(10) NOT NULL,
    DATA_CRIACAO TIMESTAMP(3) DEFAULT CURRENT_TIMESTAMP NOT NULL,
    VALR_INDICADOR NUMBER(10) NOT NULL,
    ID_MODELO NUMBER(10),
    ID_METRICA NUMBER(10),

    CONSTRAINT PK_CIA_INDICADOR PRIMARY KEY (ID_INDICADOR),

    CONSTRAINT FK_CIA_INDICADOR_MODELO FOREIGN KEY (ID_MODELO)
        REFERENCES CIA_MODELO (ID_MODELO) ON DELETE SET NULL,

    CONSTRAINT FK_CIA_INDICADOR_METRICA FOREIGN KEY (ID_METRICA)
        REFERENCES CIA_METRICA (ID_METRICA) ON DELETE SET NULL
)


CREATE SEQUENCE SEQ_CIA_INDICADOR
    START WITH 1
    INCREMENT BY 1
    NOCACHE
    NOCYCLE


CREATE OR REPLACE TRIGGER TRG_BI_CIA_INDICADOR
BEFORE INSERT ON CIA_INDICADOR
FOR EACH ROW
BEGIN
    IF :NEW.ID_INDICADOR IS NULL THEN
        SELECT SEQ_CIA_INDICADOR.NEXTVAL
          INTO :NEW.ID_INDICADOR
          FROM DUAL
    END IF
END

CREATE UNIQUE INDEX IDX_CIA_INDICADOR_MOD_MET
    ON CIA_INDICADOR (
        ID_MODELO,
        ID_METRICA
    )


COMMENT ON TABLE CIA_INDICADOR IS
'Tabela responsável pelo armazenamento dos indicadores vinculados aos modelos e métricas da plataforma.'

COMMENT ON COLUMN CIA_INDICADOR.ID_INDICADOR IS
'Identificador único do indicador cadastrado.'

COMMENT ON COLUMN CIA_INDICADOR.DATA_CRIACAO IS
'Data e hora de criação do registro do indicador.'

COMMENT ON COLUMN CIA_INDICADOR.VALR_INDICADOR IS
'Valor numérico associado ao indicador registrado.'

COMMENT ON COLUMN CIA_INDICADOR.ID_MODELO IS
'Identificador do modelo relacionado ao indicador.'

COMMENT ON COLUMN CIA_INDICADOR.ID_METRICA IS
'Identificador da métrica associada ao indicador.'
