CREATE TABLE CIA_METRICA (
    ID_METRICA NUMBER(10) NOT NULL,
    DESC_METRICA CLOB NOT NULL,
    TIPO_METRICA VARCHAR2(200 CHAR) NOT NULL,

    CONSTRAINT PK_CIA_METRICA PRIMARY KEY (ID_METRICA)
)


CREATE SEQUENCE SEQ_CIA_METRICA
    START WITH 1
    INCREMENT BY 1
    NOCACHE
    NOCYCLE


CREATE OR REPLACE TRIGGER TRG_BI_CIA_METRICA
BEFORE INSERT ON CIA_METRICA
FOR EACH ROW
BEGIN
    IF :NEW.ID_METRICA IS NULL THEN
        SELECT SEQ_CIA_METRICA.NEXTVAL
          INTO :NEW.ID_METRICA
          FROM DUAL
    END IF
END

CREATE INDEX IDX_CIA_METRICA_TIPO
    ON CIA_METRICA (TIPO_METRICA)


COMMENT ON TABLE CIA_METRICA IS
'Tabela responsável pelo cadastro das métricas utilizadas para avaliação e monitoramento na plataforma.'

COMMENT ON COLUMN CIA_METRICA.ID_METRICA IS
'Identificador único da métrica cadastrada.'

COMMENT ON COLUMN CIA_METRICA.DESC_METRICA IS
'Descrição textual da métrica utilizada pela plataforma.'

COMMENT ON COLUMN CIA_METRICA.TIPO_METRICA IS
'Tipo ou categoria da métrica cadastrada.'
