CREATE TABLE CIA_MODELO (
    ID_MODELO INTEGER GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    NOME_MODELO VARCHAR(200) NOT NULL,
    SLUG_MODELO VARCHAR(200) NOT NULL,
    ID_CATEGORIA_MODELO INTEGER NOT NULL,
    DESC_MODELO TEXT DEFAULT '' NOT NULL,
    INFO_CAPABILIDADE TEXT,
    STAT_MODELO VARCHAR(1) NOT NULL,
    QTDE_JANELA_CONTEXTO INTEGER,
    INFO_LIMITE_USO VARCHAR(200),
    TAG TEXT,
    INDI_NOVO VARCHAR(1) DEFAULT 'N' NOT NULL,
    INDI_DESTAQUE VARCHAR(1) DEFAULT 'N' NOT NULL,
    INDI_ATIVO VARCHAR(1) DEFAULT 'S' NOT NULL,
    NUMR_ORDEM INTEGER DEFAULT 0 NOT NULL,
    DATA_CRIACAO TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP NOT NULL,
    DATA_ATUALIZACAO TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP NOT NULL,
    INDI_APROVACAO_ACESSO VARCHAR(1) DEFAULT 'N' NOT NULL,
    DESC_RESUMO_ACESSO TEXT DEFAULT '' NOT NULL,
    DESC_DOCUMENTACAO_ACESSO TEXT DEFAULT '' NOT NULL,
    INFO_ENDPOINT_PADRAO VARCHAR(500),
    TIPO_AUTENTICACAO_PADRAO VARCHAR(50) DEFAULT 'api_key' NOT NULL,
    ID_FORNECEDOR INTEGER,

    CONSTRAINT PK_CIA_MODELO
        PRIMARY KEY (ID_MODELO),

    CONSTRAINT UK_CIA_MODELO_SLUG
        UNIQUE (SLUG_MODELO),

    CONSTRAINT FK_CIA_MODELO_CATEGORIA
        FOREIGN KEY (ID_CATEGORIA_MODELO)
        REFERENCES CIA_CATEGORIA_MODELO (ID_CATEGORIA_MODELO),

    CONSTRAINT FK_CIA_MODELO_PROVEDOR
        FOREIGN KEY (ID_FORNECEDOR)
        REFERENCES CIA_FORNECEDOR (ID_FORNECEDOR)
        ON DELETE SET NULL,

    CONSTRAINT CK_CIA_MODELO_STAT
        CHECK (STAT_MODELO IN ('B', 'D', 'M')),

    CONSTRAINT CK_CIA_MODELO_NOVO
        CHECK (INDI_NOVO IN ('S', 'N')),

    CONSTRAINT CK_CIA_MODELO_DESTAQUE
        CHECK (INDI_DESTAQUE IN ('S', 'N')),

    CONSTRAINT CK_CIA_MODELO_ATIVO
        CHECK (INDI_ATIVO IN ('S', 'N')),

    CONSTRAINT CK_CIA_MODELO_APROVACAO
        CHECK (INDI_APROVACAO_ACESSO IN ('S', 'N'))
)
;

CREATE INDEX IDX_CIA_MODELO_CATEGORIA
    ON CIA_MODELO (ID_CATEGORIA_MODELO)
;

CREATE INDEX IDX_CIA_MODELO_SLUG
    ON CIA_MODELO (SLUG_MODELO)
;

COMMENT ON TABLE CIA_MODELO IS
'Tabela responsável pelo cadastro e gerenciamento dos modelos de inteligência artificial disponíveis na plataforma.';

COMMENT ON COLUMN CIA_MODELO.ID_MODELO IS
'Identificador único do modelo de inteligência artificial.';

COMMENT ON COLUMN CIA_MODELO.NOME_MODELO IS
'Nome de exibição do modelo de inteligência artificial.';

COMMENT ON COLUMN CIA_MODELO.SLUG_MODELO IS
'Identificador textual único utilizado em URLs e integrações.';

COMMENT ON COLUMN CIA_MODELO.ID_CATEGORIA_MODELO IS
'Identificador da categoria funcional do modelo de inteligência artificial.';

COMMENT ON COLUMN CIA_MODELO.DESC_MODELO IS
'Descrição detalhada do modelo de inteligência artificial.';

COMMENT ON COLUMN CIA_MODELO.INFO_CAPABILIDADE IS
'Lista de capacidades e funcionalidades suportadas pelo modelo.';

COMMENT ON COLUMN CIA_MODELO.STAT_MODELO IS
'Situação atual do modelo na plataforma. B = Beta, D = Disponível, M = Manutenção.';

COMMENT ON COLUMN CIA_MODELO.QTDE_JANELA_CONTEXTO IS
'Quantidade máxima de tokens suportados na janela de contexto do modelo.';

COMMENT ON COLUMN CIA_MODELO.INFO_LIMITE_USO IS
'Informações sobre limites de utilização do modelo.';

COMMENT ON COLUMN CIA_MODELO.TAG IS
'Lista de etiquetas utilizadas para categorização e pesquisa do modelo.';

COMMENT ON COLUMN CIA_MODELO.INDI_NOVO IS
'Indica se o modelo é considerado novo na plataforma. S = Sim, N = Não.';

COMMENT ON COLUMN CIA_MODELO.INDI_DESTAQUE IS
'Indica se o modelo deve ser exibido como destaque. S = Sim, N = Não.';

COMMENT ON COLUMN CIA_MODELO.INDI_ATIVO IS
'Indica se o modelo está ativo para utilização. S = Sim, N = Não.';

COMMENT ON COLUMN CIA_MODELO.NUMR_ORDEM IS
'Ordem de exibição do modelo nas interfaces da plataforma.';

COMMENT ON COLUMN CIA_MODELO.DATA_CRIACAO IS
'Data e hora de criação do registro do modelo.';

COMMENT ON COLUMN CIA_MODELO.DATA_ATUALIZACAO IS
'Data e hora da última atualização do registro do modelo.';

COMMENT ON COLUMN CIA_MODELO.INDI_APROVACAO_ACESSO IS
'Indica se o modelo exige aprovação prévia para utilização. S = Sim, N = Não.';

COMMENT ON COLUMN CIA_MODELO.DESC_RESUMO_ACESSO IS
'Resumo das regras e condições de acesso ao modelo.';

COMMENT ON COLUMN CIA_MODELO.DESC_DOCUMENTACAO_ACESSO IS
'Documentação complementar sobre acesso e utilização do modelo.';

COMMENT ON COLUMN CIA_MODELO.INFO_ENDPOINT_PADRAO IS
'Endereço padrão de integração utilizado pelo modelo.';

COMMENT ON COLUMN CIA_MODELO.TIPO_AUTENTICACAO_PADRAO IS
'Tipo de autenticação padrão utilizado para acesso ao modelo.';

COMMENT ON COLUMN CIA_MODELO.ID_FORNECEDOR IS
'Identificador do fornecedor responsável pelo modelo de inteligência artificial.';
