-- TIPO_PERFIL:
--     'AD': Administrador - Perfil com acesso total às funcionalidades da plataforma, incluindo gerenciamento de usuários, configurações avançadas e acesso a relatórios detalhados.
--     'GT': Gestor - Perfil com acesso a funcionalidades de gerenciamento de equipes e projetos, incluindo visualização de relatórios e métricas.
--     'SV': Servidor - Perfil com acesso limitado às funcionalidades da plataforma, focado em operações diárias e tarefas específicas.
--     'CR': Curador - Perfil com acesso para revisar e aprovar conteúdos gerados pelos usuários, como prompts e resultados, garantindo a qualidade e conformidade com as diretrizes da plataforma.
--     'CM': Curador Modelos - Perfil com acesso compermissão somente para avaliar modelos.
--     'GP': Gestor Produto - Perfil com acesso para gerenciar o catálogo de produtos, incluindo adição, edição e remoção de produtos, bem como visualização de relatórios relacionados a vendas e desempenho dos produtos.

CREATE TABLE CIA_USUARIO (
    ID_USUARIO INTEGER GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    NOME_USUARIO VARCHAR(200) NOT NULL,
    DESC_EMAIL VARCHAR(200) NOT NULL,
    CODG_USUARIO VARCHAR(32),
    TIPO_PERFIL VARCHAR(2) DEFAULT 'SV' NOT NULL,
    NOME_ORGAO VARCHAR(200) DEFAULT '' NOT NULL,
    URL_AVATAR VARCHAR(500),
    INDI_ATIVO VARCHAR(1) DEFAULT 'S' NOT NULL,
    DATA_CRIACAO TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP NOT NULL,
    DATA_ATUALIZACAO TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP NOT NULL,
    HASH_SENHA VARCHAR(255),

    CONSTRAINT PK_CIA_USUARIO PRIMARY KEY (ID_USUARIO),

    CONSTRAINT UK_CIA_USUARIO_EMAIL UNIQUE (DESC_EMAIL),

    CONSTRAINT CK_CIA_USUARIO_ATIVO
        CHECK (
            INDI_ATIVO IN ('S', 'N')
        ),

    CONSTRAINT CK_CIA_USUARIO_PERFIL
        CHECK (
            TIPO_PERFIL IN (
                'AD',
                'GT',
                'SV',
                'CR',
                'CM',
                'GP'
            )
        )
)
;

CREATE INDEX IDX_CIA_USUARIO_EMAIL
    ON CIA_USUARIO (DESC_EMAIL)
;

CREATE INDEX IDX_CIA_USUARIO_PERFIL
    ON CIA_USUARIO (TIPO_PERFIL)
;

COMMENT ON TABLE CIA_USUARIO IS
'Tabela responsável pelo cadastro e gerenciamento dos usuários da plataforma.';

COMMENT ON COLUMN CIA_USUARIO.ID_USUARIO IS
'Identificador único do usuário cadastrado.';

COMMENT ON COLUMN CIA_USUARIO.NOME_USUARIO IS
'Nome completo do usuário cadastrado na plataforma.';

COMMENT ON COLUMN CIA_USUARIO.DESC_EMAIL IS
'Endereço de e-mail utilizado pelo usuário para autenticação e comunicação.';

COMMENT ON COLUMN CIA_USUARIO.CODG_USUARIO IS
'Código identificador interno do usuário na plataforma ou organização.';

COMMENT ON COLUMN CIA_USUARIO.TIPO_PERFIL IS
'Perfil de acesso do usuário na plataforma. AD = Administrador, GT = Gestor, SV = Servidor, CR = Curador, CM = Curador de Modelos, GP = Gestor de Produto.';

COMMENT ON COLUMN CIA_USUARIO.NOME_ORGAO IS
'Nome do órgão ou instituição ao qual o usuário está vinculado.';

COMMENT ON COLUMN CIA_USUARIO.URL_AVATAR IS
'Endereço da imagem de avatar associada ao usuário.';

COMMENT ON COLUMN CIA_USUARIO.INDI_ATIVO IS
'Indica se o usuário está ativo para acesso à plataforma. S = Sim, N = Não.';

COMMENT ON COLUMN CIA_USUARIO.DATA_CRIACAO IS
'Data e hora de criação do registro do usuário.';

COMMENT ON COLUMN CIA_USUARIO.DATA_ATUALIZACAO IS
'Data e hora da última atualização do registro do usuário.';

COMMENT ON COLUMN CIA_USUARIO.HASH_SENHA IS
'Hash criptográfico da senha utilizada pelo usuário para autenticação.';

CREATE OR REPLACE FUNCTION trg_bu_cia_usuario_fn()
RETURNS TRIGGER AS $$
BEGIN
  NEW.data_atualizacao = CURRENT_TIMESTAMP;
  RETURN NEW;
END;
$$ LANGUAGE plpgsql;

CREATE TRIGGER trg_bu_cia_usuario
  BEFORE UPDATE ON cia_usuario
  FOR EACH ROW EXECUTE FUNCTION trg_bu_cia_usuario_fn();
